# docopt-ng

./: .gitignore  docopt.py  pyproject.toml  tox.ini
.github/workflows/: build.yml
scripts/: upload-cov.sh
