[build-system]
requires = ['setuptools', 'wheel']

[tool.pytest.ini_options]
minversion = "6.0"
# You need to have `pytest-cov` and `pytest-mypy` installed for this to work.
addopts = "--cov=docopt --cov-branch --cov-report=term-missing --cov-report=html:coverage_report --mypy --mypy-ignore-missing-imports"
testpaths = "./tests"